_sass/themes/oriblog/_base.scss
// Breakpoint variables

/**
 * Basic styling
 */
body {
    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
    color: $text-color;
//    background-color: $background-color;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
}

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
}

.highlight {
  pre {
    background-color: transparent; 
    border: 1px solid $brand-primary;
    box-shadow: 1px 1px 1px rgba(0,0,0,.2); 
  }

  pre:hover {
    background-color: #eee;
    border: 1px solid $yellow-makara;    
    box-shadow: 3px 3px 3px rgba(0,0,0,.5);  
    @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);     
  }
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}






/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}

/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;

        path {
//            fill: $grey-color;
        }
    }
}


// Epsi


body {
//  http://www.designbolts.com/2012/12/22/50-free-simple-white-seamless-patterns-for-website-backgrounds/
    background-image: url("../images/subtle-tile.jpg");
}

.center-block {float: none !important}



div.post-meta {
  border: 1px solid #666666;
  border-width: 1px 0;
}  


// ---------------------------------------------------------------------
// components

// ---------------------------------------------------------------------
// Components: Tags

// Tag label background color

ul#tags a { display: inline; }

div.post-tags {
  text-align: right;
}  

.tag-post-item,
.post-item,
.post-header {
    @extend %vertical-rhythm;
}

.tag-post-item {
  border-bottom: 1px solid #666666;
}

#tags a:hover {
  color: white;
}        

a span.label-tag {
    background-color: #eee;
    color: $monad-blue;
    span.fa-tag,
    span.tag-count {
        color: $gray;
        vertical-align: super;
        font-size: smaller;  
    }
}

a:hover span.label-tag {
    background-color: $monad-blue;
    color: white;
    box-shadow: 2px 2px 2px rgba(0,0,0,.5); 
}

.post-meta #tags {
   .label-tag {
      padding-bottom: .0em;
    }
}

.post-list {
  .post-item {
    .label-tag {
      padding-bottom: .1em;
    }
  }
}






// ---------------------------------------------------------------------
// _layout

// page.html, post.html

.maxwidth {
   margin-right: auto;
   margin-left: auto;
   max-width: 1366px; /* or 1360px */
}

// ---------------------------------------------------------------------
// _includes

// pagination.html, pagination-better.html, post.html

.pagination {
  text-align: center;
}

.pagination li a.pagination-item {
    border: 1px solid $monad-blue;
}


.pagination li:hover a.pagination-item {
    color: white;
    border: 1px solid $yellow-makara;    
    box-shadow: 2px 2px 2px rgba(0,0,0,.2); 
}

// post.html

.post-author {
    margin-left: 20px;
}

// footer.html

.site-owner {
    text-align: center;
}

// chunk-page-sidebar.html, chunk-post-sidebar.html

ul.recent-post {
    margin-left: 20px;
}

ul.recent-post li:before {    
    font-family: 'FontAwesome';
    content: '\f054';
    margin: 0 5px 0 -20px;
    color: $gray-dark;
}

ul.recent-post li:hover:before {    
    color: $gray-base;
}

// ---------------------------------------------------------------------
// pages

// tags.html

.anchor-target {
  padding-top: 70px; 
  margin-top: -70px;
} 

// blog.html (index.html)
// using bootstrap color

.post-list {
  .post-item {
    a {
      text-color: $brand-primary;
    }
  }
}

// ---------------------------------------------------------------------
// 

.well {
  blockquote {
    border-left-color: $monad-blue;
  }

  blockquote:hover {
    border-left-color: $yellow-makara;
    background-color: $monad-blue;
    color: white;
    box-shadow: 3px 3px 3px rgba(0,0,0,.5);  
    @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);     
  }
  
  blockquote:hover a { color: $yellow-makara }
}

